# gaia-script

./: .compiler_config  .gitignore  API_REFERENCE.md  CLAUDE.md  CLAUDE_INSTRUCTIONS.md  Cargo.toml  EVOLVE.md  GAIASCRIPT_REFERENCE.md  INSTRUCTIONS.md  README-translate.md  README.md  SUMMARY.md  abstract-algebra-encoding.js  advanced-unicode-combining.js  analyze-symbol-refinements.js  category-theory-symbols.js  check-server.sh  compiler-enhanced.js  compiler-minimal.js  compiler-production.js  docs.gaia  docs.md  evolve.sh  gaia  gaia-compile  gaia-native-cli.js  gaia-playground.html  gaia-translator.html  gaia.config  gaia.csv  gaia.js  gaiaclaude.txt  gaiallvm.md  gaiapkg.js  gaiatransl.txt  game.js  index.html  info.txt  install.bat  install.sh  (+30 more)
benchmark/: benchmark.ts
cleanup-strategy/: CLEANUP_PLAN.md
cli/: gaia-compile.ts  gaia-native.ts
comp/: Cargo.toml  base64_numbers.js  build.js  build_react.js  restart.sh
comp/docs/web/css/: styles.css.bak
comp/docs/web/js/: gaia-runtime.js
comp/patches/: lynx_compiler_patch.rs
comp/src/: aopl.pest  asm_compiler.rs  asm_runtime_x86_64.s  ast.rs  compiler.rs  gaia_ui_compiler.js  gaia_ui_ios_bridge.swift  interpreter.rs  ios_app_example.swift  lib.rs  main.rs  parser.rs  platform_detector.rs  test_asm_compiler.rs  universal-compiler.rs  universal_compiler.rs  universal_compiler.rs.bak  web_server.rs
comp/src/compilers/: android_compiler.rs  flutter_compiler.rs  flutter_compiler_patch.rs  kotlin_compiler.rs  kotlin_compiler_patch.rs  linux_compiler.rs  llvm_compiler.rs  lynx_compiler.rs  macos_compiler.rs  react_compiler.rs  windows_compiler.rs
comp/src/extensions/: ui_extensions.rs
comp/src/wasm/: build_wasm.sh  gaiaui.wat
compiler/: emitter-simple.ts  emitter.ts  index.ts  parser.ts  scanner.ts  transformer-simple.ts  transformer.ts
docs/: README.md  ai_agent_prompt.md  cross-model-validation-report.md  demo.js  gaiascript-mathematical-guide.md  gaiascript-syntax-specification.md  gaiascript-typescript-ast-mapping.md  gaiascript_reference.md  index.html  macos_compiler.md  mathematical-symbols.md  test-environment.md  (+2 more)
(+88 files in other folders)
