[package]
name = "gaiascript"
version = "0.2.0"
edition = "2021"
description = "Ultra-Compact Symbolic Programming Language"
authors = ["GaiaScript Team"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
pest = "2.7"
pest_derive = "2.7"
thiserror = "1.0"
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
