[package]
name = "gaiascript"
version = "0.1.0"
edition = "2021"
description = "An AI-Optimized Programming Language (AOPL) implementation"
authors = ["GaiaScript Team"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
pest = "2.7"
pest_derive = "2.7"
thiserror = "1.0"
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Temporarily disabled LLVM dependency to fix build issues
# inkwell = { version = "0.2.0", features = ["llvm14-0"] }
warp = "0.3"
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
